[package]
name = "iana-assignments-rs"
version = "0.0.2"
authors = ["Jacob Okamoto <github@oko.io>"]
license = "BSD-3-Clause"
description = "Rust library exporting IANA registry constants."
repository = "https://github.com/oko/iana-assignments-rs"
edition = "2018"
excludes = [
    "tools/*",
]

[dependencies]
